# GlassBoxAI-RNN

./: README.md  facaded_rnn.cpp  facaded_rnn.cu  facaded_rnn_opencl.cpp  facaded_rnn_opencl2.cpp  rnn.cpp  rnn.cu  rnn_cpp_tests.sh  rnn_cuda_tests.sh  rnn_facade.cpp  rnn_facade.hpp  rnn_opencl.cpp  rnn_opencl_tests.sh  work.cu
facaded_rust_cuda/: Cargo.toml
facaded_rust_cuda/src/: main.rs
facaded_rust_cuda/src/kani/: README.md  bounds_checks.rs  concurrency.rs  constant_time.rs  division_by_zero.rs  enum_exhaustion.rs  floating_point.rs  input_sanitization.rs  integer_overflow.rs  memory_leaks.rs  mod.rs  no_panic.rs  pointer_validity.rs  resource_limits.rs  result_coverage.rs  state_machine.rs
rust_cuda/: Cargo.toml
rust_cuda/src/: main.rs
